[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-coverage-visualizer"
version = "0.1.0"
description = "A test coverage visualizer"
authors = [
    { name = "David Cohn Lifshitz", email = "david.kon@gmail.com" }
    ]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "flake8",
    "black",
    "mypy"
]

[tool.hatch.metadata]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/test_coverage_visualizer"]
